--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
   <div class="container">
     <h1>Información de Pokémon</h1>
+    <div class="ball">
+      <img src="/Sprint4-TeamChallenge-select-pokemon/css/bola.png" alt="dibujo" />
+    </div>
     <div class="pokemon-form">
       <select id="pokemon-select">
         <option value="bulbasaur">Bulbasaur</option>
